--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -2,11 +2,11 @@
 
 <ul>
  <% @ratings.each do |rating| %>
-   <li> <%= rating %> </li>
+   <li> <%= rating %> <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' }  %> </li>
  <% end %>
 </ul>
 <p> Number of ratings: <%= @ratings.count %> </p>
 
 <p>
-<%= link_to 'New Rating', ratings_new_path %>
+<%= link_to 'New Rating', new_rating_path %>
 </p>
