--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -10,17 +10,22 @@
   <i>Established in year:
   <%= @brewery.year %></i>
 </p>
-
+<p>
+   Number of beers:
+  <%= @brewery.beers.count %>
+</p>
 <p>
   Brewery's beers:
  <% @brewery.beers.each do |beer| %>
    <%= link_to beer.name, beer %>
  <% end %>
 </p>
-
 <p>
-   Number of beers:
-  <%= @brewery.beers.count %>
+<% if @brewery.ratings.empty? %>
+ Brewery's beers have not yet been rated!
+<% else %>
+ Brewery's beers have <%= pluralize(@brewery.ratings.count, 'rating')%>, average <%= @brewery.average_rating %>
+<% end %>
 </p>
 
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
