--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,14 @@
     <div class="navibar">
       <%= link_to 'breweries', breweries_path %>
       <%= link_to 'beers', beers_path %>
-      <%= link_to 'ratings', ratings_path %>
+      <%= link_to 'ratings', ratings_path %> <b>|</b>
+      <% if current_user %>
+        <%= link_to current_user.username, current_user %>
+        <%= link_to 'signout', signout_path, method: :delete %>
+      <% else %>
+        <%= link_to 'signin', new_session_path %>
+        <%= link_to 'signup', new_user_path %>
+      <% end %>
     </div>
 
   <%= yield %>
