--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,28 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+   <body>
     <div class="navibar">
       <%= link_to 'breweries', breweries_path %>
       <%= link_to 'beers', beers_path %>
-      <%= link_to 'ratings', ratings_path %> <b>|</b>
+      <%= link_to 'ratings', ratings_path %>
+      <%= link_to 'users', users_path %>
+      <%= link_to 'clubs', beer_clubs_path %>
+      <%= link_to 'places', places_path %>
+      |
       <% if current_user %>
         <%= link_to current_user.username, current_user %>
+        <%= link_to 'rate a beer ', new_rating_path %>
+        <%= link_to 'join a club ', new_membership_path %>
         <%= link_to 'signout', signout_path, method: :delete %>
       <% else %>
-        <%= link_to 'signin', new_session_path %>
-        <%= link_to 'signup', new_user_path %>
+        <%= link_to 'sigin', signin_path %>
+        <%= link_to 'sigup', signup_path %>
       <% end %>
     </div>
 
-  <%= yield %>
+
+
+    <%= yield %>
   </body>
 </html>
