--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -16,5 +16,12 @@
     <li><%= link_to member.username, member %></li>
   <% end %>
 </ul>
+<% if current_user and not @beer_club.members.include?(current_user) %>
+  <%= form_for(@membership) do |f| %>
+    <%= f.hidden_field :beer_club_id %>
+    <%= f.submit value:"join the club" %>
+  <% end %>
+<% end %>
 
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> 
+
