--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,10 +1,10 @@
-<p id="notice"><%= notice %></p>
+<p id="notice"></p>
 
 <h1>Breweries</h1>
 
 <p> Listing breweries</p>
 <p> Number of breweries: <%= @breweries.count %> </p>
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
