--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
+<p id="notice"></p>
 
 <h1>Memberships</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Beer club</th>
@@ -10,7 +10,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-<p id="notice"><%= notice %></p>
+<p id="notice"></p>
 
 <p>
   <strong>Beer club:</strong>
