dropdown menu for navibar

--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -19,7 +19,7 @@
 <% if current_user and not @beer_club.members.include?(current_user) %>
   <%= form_for(@membership) do |f| %>
     <%= f.hidden_field :beer_club_id %>
-    <%= f.submit value:"join the club" %>
+    <%= f.submit value:"join the club", class:'btn btn-primary' %>
   <% end %>
 <% end %>
 
