--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -18,11 +18,11 @@
 
 <% if current_user %>
   <h4>give a rating:</h4>
-
-  <%= form_for(@rating) do |f| %>
+  
+<%= form_for(@rating) do |f| %>
     <%= f.hidden_field :beer_id %>
     score: <%= f.number_field :score %>
-    <%= f.submit %>
+    <%= f.submit class:"btn btn-primary" %>
   <% end %>
 
   <%= link_to 'Edit', edit_beer_path(@beer) %> 
