--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: brewery, local: true) do |form| %>
   <% if brewery.errors.any? %>
     <div id="error_explanation">
@@ -11,17 +12,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
+  <form>
+    <div class="form-group">
+     <%= form.label :name %>
+     <%= form.text_field :name %>
+    </div>
 
-  <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year %>
-  </div>
+    <div class="form-group">
+     <%= form.label :year %>
+     <%= form.number_field :year %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="actions">
+     <%= form.submit %>
+    </div>
+  </form>
 <% end %>
