--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -28,5 +28,5 @@
 <% end %>
 </p>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
+<%= link_to 'Edit', edit_brewery_path(@brewery) %> 
 <%= link_to 'Back', breweries_path %>
