--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,22 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :username %>
-    <%= form.text_field :username %>
-  </div>
+  <form>
+    <div class="form-group">
+      <%= form.label :username %>
+      <%= form.text_field :username %>
+    </div>
 
-  <div class="field">
-    <%= form.label :password %><br />
-    <%= form.password_field :password %>
-  </div>
+    <div class="form-group">
+      <%= form.label :password %><br />
+     <%= form.password_field :password %>
+   </div>
   
-  <div class="field">
-    <%= form.label :password_confirmation %><br />
-    <%= form.password_field :password_confirmation  %>
-  </div>
+   <div class="form-group">
+     <%= form.label :password_confirmation %><br />
+     <%= form.password_field :password_confirmation  %>
+   </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+   <div class="actions">
+     <%= form.submit %>
+   </div>
+  </form>
 <% end %>
