--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,10 +1,11 @@
 <h2>List of ratings</h2>
 
-<ul>
- <% @ratings.each do |rating| %>
-   <li> <%= rating %> <%= link_to rating.user.username, rating.user %> </li>
- <% end %>
-</ul>
+<table class="table table-hover">
+  <% @ratings.each do |rating| %>
+     <li> <%= rating %> <%= link_to rating.user.username, rating.user %> </li>
+  <% end %>
+</table>
+
 <p> Number of ratings: <%= @ratings.count %> </p>
 
 <p>
