--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,10 +1,12 @@
 <p id="notice"></p>
 
-<p>
 <h2>
   <%= @brewery.name %>
+  <% if not @brewery.active  %>
+    <span class="badge badge-info">retired</span>
+  <% end %>
 </h2>
-</p>
+<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
 
 <p>
   <i>Established in year:
