--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Beers</h1>
 
+<% cache "beerlist-#{@order}", skip_digest: true do %>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -26,6 +28,7 @@
   </tbody>
 </table>
 
+<% end %>
 
 <p>
 <%= link_to 'New Beer', new_beer_path %>
