--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Breweries</h1>
 
+<% cache 'brewerylist', skip_digest: true do %>
+
 <h2>Active</h2>
 
 <p> Number of active breweries: <%= @active_breweries.count %> </p>
@@ -14,6 +16,8 @@
 
 <%= render 'list', breweries: @retired_breweries %>
 
+
+<% end %>
 <br>
 
 <% if current_user %>
